# arvan_test_final

master/: Cargo.toml  master_runner.sh
master/src/: main.rs  mods.rs
repairer1/: Cargo.toml  log.txt  runner.sh
repairer1/src/: main.rs
repairer2/: Cargo.toml  log.txt  runner.sh
repairer2/src/: main.rs  models.rs
repairer3/: Cargo.toml  log.txt  runner.sh
repairer3/src/: main.rs  mods.rs
repairer4/: Cargo.toml  log.txt  runner.sh
repairer4/src/: main.rs
some_test_fol/: some_text.txt
