[package]
name = "repairer3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.4"
rand = "0.8.5"
serde_json = "1.0.114"
serde = {version = "1.0.193", features = ["derive"]}
bincode = "1.3.3"
